<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!DOCTYPE resources [<!ENTITY trakt_api_url_base "https://api.trakt.tv"><!ENTITY fanart_api_url_base "http://webservice.fanart.tv/v3">]>

<resources>
    <string name="app_name"><![CDATA[chill.y]]></string>
    <string name="app_version">1.1.0 Beta</string>
    <string name="app_date">2017-07-26</string>
    <string name="app_developer">Adis Durakovic</string>
    <string name="app_website">https://chilly.adisdurakovic.com</string>
    <string name="browse_title"><![CDATA[Chilly]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="tvshow_seasons">Seasons</string>
    <string name="tvshow_season">Season</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>

    <string name="popular_header">Popular Videos</string>
    <string name="more_samples">More Samples</string>
    <string name="grid_view">Vertical Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="play_now">Play</string>
    <string name="play_from">Play from ...</string>
    <string name="play_trailer">Trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="queue_name">Play Queue</string>


    <string name="movies_more">MORE MOVIES</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="boxoffice">Box Office</string>
    <string name="movies_trending">MOVIES: Trending</string>
    <string name="movies_browse">MOVIES: Browse</string>
    <string name="movies_browse_desc">Choose which list of movies to load.</string>
    <string name="genre">GENRE</string>
    <string name="year">YEAR</string>

    <string name="search_results">Search results for \'%1$s\'</string>
    <string name="no_search_results">No search results found for \'%1$s\'</string>
    <string name="catalog_url">https://codecraft.at/tv.json</string>

    <!-- y-m-d -->


    <!--IMDB -->
    <string name="imdb_url_movies_popular"><![CDATA[http://www.imdb.com/search/title?title_type=feature,tv_movie&num_votes=1000,&production_status=released&release_date=date%5B365%5D,date%5B60%5D&count=10&start=1&view=advanced&sort=moviemeter,asc]]></string>
    <string name="imdb_url_tvshows_popular"><![CDATA[http://www.imdb.com/search/title?title_type=tv_series,mini_series&num_votes=100,&release_date=,date[0]&sort=moviemeter,asc&count=10&start=1]]></string>

    <!--Trakt -->
    <string name="trakt_api_version">2</string>
    <string name="trakt_api_key">0382d8815ebf303ee57a69a88b02348afaf40bcb39b7053da6bb2da36ee800a3</string>
    <string name="trakt_api_secret">078b464ad3d02eefb44c0259dea679b40074dbfef0fd01947c9b59fc546010de</string>
    <string name="trakt_api_url">&trakt_api_url_base;</string>

    <!-- TMDB -->
    <string name="tmdb_api_url">https://api.themoviedb.org/3</string>
    <string name="tmdb_api_key">7f278e56a85aa1aa3ead3db5cfffbc31</string>
    <string name="tmdb_image_url">https://image.tmdb.org/t/p/w500</string>

    <!-- Fanart -->
    <string name="fanart_api_url">&fanart_api_url_base;</string>
    <string name="fanart_api_key">a24e36632e681ebb4b7763c606b0e2f7</string>

    <!-- Error messages -->

    <string name="videos_loading_error">Failed to load videos. Please check your network connection.</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <string name="login">Login</string>

    <!-- Global Search -->
    <!-- The action label for global search -->
    <string name="global_search">GLOBALSEARCH</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Leanback API Demo</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search for videos</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Leanback API Demo Videos</string>

    <string name="noah_description">to build an Ark to save creation from the coming flood.</string>
    <string name="noah_title">Noah</string>
    <string name="dragon2_title">How to Train Your Dragon 2</string>
    <string name="dragon2_description">Set in the mythical world of burly Vikings and wild dragons,
        and based on the book by Cressida Cowell, the action comedy tells the story of Hiccup, a
        Viking teenager who doesn\'t exactly fit in with his tribe\'s longstanding tradition of
        heroic dragon slayers. Hiccup\'s world is turned upside down when he encounters a dragon
        that challenges he and his fellow Vikings to see the world from an entirely different point
        of view.
    </string>
    <string name="maleficent_title">Maleficent</string>
    <string name="maleficent_description">The untold story of Disney\'s most iconic villain from the
        1959 classic "Sleeping Beauty." A beautiful, pure-hearted young woman with stunning black
        wings, Maleficent has an idyllic life growing up in a peaceable forest kingdom, until one
        day when an invading army of humans threatens the harmony of the land.
    </string>

    <!-- Strings related to guided sequence activity -->
    <string name="guidedstep_first_title">Guided Step First Page</string>
    <string name="guidedstep_first_description">First step of guided sequence</string>
    <string name="guidedstep_first_breadcrumb">Guided Steps: 1</string>
    <string name="guidedstep_second_title">Guided Step Second Page</string>
    <string name="guidedstep_second_description">Showcasing different action configurations</string>
    <string name="guidedstep_second_breadcrumb">Guided Steps: 2</string>
    <string name="guidedstep_third_title">Guided Step Third Page</string>
    <string name="guidedstep_third_breadcrumb">Guided Steps: 3</string>
    <string name="guidedstep_third_command">You chose: </string>
    <string name="guidedstep_action_description">The description can be quite long as well.
        Just be sure to set multilineDescription to true in the GuidedAction.
    </string>
    <string name="guidedstep_action_title">
        Note that Guided Actions can have titles that are quite long.
    </string>
    <string name="guidedstep_continue">Continue</string>
    <string name="guidedstep_letsdoit">Let\'s do it</string>
    <string name="guidedstep_nevermind">Never mind</string>
    <string name="guidedstep_cancel">Cancel</string>
    <string name="header_icon">Header icon</string>

    <string name="mobile_welcome_title">Welcome to the Leanback Sample</string>
    <string name="mobile_welcome_description">Welcome to the Leanback Sample app! Try opening this on an Android TV for a great leanback experience.</string>

    <!-- Strings related to onboarding -->
    <string name="onboarding_title_welcome">Welcome to the Leanback Sample</string>
    <string name="onboarding_title_design">Designed for Android TV</string>
    <string name="onboarding_title_simple">Simple to include</string>
    <string name="onboarding_title_project">Check out the Sample Project</string>

    <string name="onboarding_description_welcome">This is the Onboarding Fragment, which runs when the user first opens the app</string>
    <string name="onboarding_description_design">The Leanback sample shows how to quickly design apps designed for a 10-foot user interface</string>
    <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
    <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
    <string name="pref_title_settings">Preferences</string>
    <string name="pref_title_info">Info</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_date">Date</string>
    <string name="pref_title_developer">Developer</string>
    <string name="pref_title_recommendations">Recommendations</string>
    <string name="pref_key_recommendations">pref_recommendations</string>
    <string name="pref_key_screen_general">general_settings</string>
    <string name="pref_title_screen_general">General Settings</string>
    <string name="pref_key_screen_signin">signin</string>
    <string name="pref_title_screen_signin">Please Login</string>
    <string name="pref_title_login_description">Please enter your username and password</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_trakt">Trakt</string>
    <string name="pref_key_login">pref_login</string>
    <string name="pref_title_login">Login</string>


    <string name="playback_getsources">Fetching sources...</string>
    <string name="playback_nosources">No sources found!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
