<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_settings">
        <SwitchPreference
            android:title="@string/pref_title_recommendations"
            android:defaultValue="true"
            android:key="@string/pref_key_recommendations" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_trakt">
        <Preference
            android:key="@string/pref_key_login"
            android:title="@string/pref_title_login" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_info">
        <Preference
            android:title="@string/pref_title_version"
            android:key="pref_version"
            android:summary="@string/app_version" />
        <Preference
            android:title="@string/pref_title_date"
            android:key="pref_version"
            android:summary="@string/app_date" />
        <Preference
            android:key="pref_developer"
            android:title="@string/pref_title_developer"
            android:summary="@string/app_developer" />
    </PreferenceCategory>
</PreferenceScreen>